k8s/04-web/service.yml
apiVersion: v1
kind: Service
metadata:
  name: scratchy-web
  namespace: scratchy-ns
  labels:

spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: scratchy-web-label
